--- a/index.html
+++ b/index.html
@@ -5,23 +5,24 @@
     <meta charset="utf-8" />
     <meta name="description" content="web dev" />
     <meta name="author" content="Jaimie de Rijk" />
-    <meta name="keywords" content="Anna Paulowna" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" media="screen" rel="stylesheet" type="text/css" />
-    <link href='http://fonts.googleapis.com/css?family=Audiowide' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:600italic,600' rel='stylesheet' type='text/css'>
 </head>
 <body>
     <section>
     	<h1>web app from scratch</h1>
-    	<<nav>
+    	<nav>
     		<ul>
-    			<li><a href="" title=""></a></li>
-    			<li><a href="" title=""></a></li>
+    			<li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht2" title="">Opdracht 2</a></li>
+    			<li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht3" title="">Opdracht 3</a></li>
+                <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/blob/master/opdracht4/cmdgeo-0.1.js" title="">Opdracht 4</a></li>
+                <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht5" title="">Opdracht 5</a></li>
+                <li><a href="file:///C:/Users/jaimie%20laptop/Documents/GitHub/Nieuwe%20map/jaimiederijk.github.io/opdracht5/index.html#best-practices" title="">Live: Opdracht 5</a></li>
     		</ul>
     	</nav>
     </section>
 
-    <script type="text/javascript" src="javascript/javascript.js"></script>        
+    <script type="text/javascript" src="javascript/javascript.js"></script>
 </body>
 </html>
