--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     			<li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht3" title="">Opdracht 3</a></li>
                 <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/blob/master/opdracht4/cmdgeo-0.1.js" title="">Opdracht 4</a></li>
                 <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht5" title="">Opdracht 5</a></li>
-                <li><a href="file:///C:/Users/jaimie%20laptop/Documents/GitHub/Nieuwe%20map/jaimiederijk.github.io/opdracht5/index.html#best-practices" title="">Live: Opdracht 5</a></li>
+                <li><a href="/opdracht5/index.html#best-practices" title="">Live: Opdracht 5</a></li>
     		</ul>
     	</nav>
     </section>
