--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/blob/master/opdracht4/cmdgeo-0.1.js" title="">Opdracht 4</a></li>
                 <li><a href="https://github.com/jaimiederijk/web-app-from-scratch/tree/master/opdracht5" title="">Opdracht 5</a></li>
                 <li><a href="/opdracht5/index.html#best-practices" title="">Live: Opdracht 5</a></li>
+                <li><a href="/week3" title="">week3 web app from scratch</a></li>
     		</ul>
     	</nav>
     </section>
